...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutFirstPasswordCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewFirstPasswordCheckTitle"
                    style="@style/ScreenHeading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/set_up_flow_crypt" />

...
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/see_choosing_secure_pass_phrases"
                        android:textColor="@android:color/black" />

                    <ImageButton
                        android:id="@+id/imageButtonShowPasswordHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/see_choosing_secure_pass_phrases"
                        android:padding="@dimen/default_margin_content_small"
...
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHint"
                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextKeyPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:inputType="textPassword" />

...
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_margin_content_small"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/textViewPasswordQualityInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_small"
                        android:gravity="center"
                        tools:text="WEAK (average time to crack: 13 seconds)" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonSetPassPhrase"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/default_margin_content_big"
                    android:text="@string/set_pass_phrase"
                    android:theme="@style/AppWidget.Button.SilverWithWhiteText"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
...
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeftSecond"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHintSecond"
                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextKeyPasswordSecond"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:inputType="textPassword" />

...
                        android:gravity="center"
                        android:visibility="invisible" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonConfirmPassPhrases"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/default_margin_content_big"
                    android:text="@string/confirm_pass_phrase"
                    android:theme="@style/AppWidget.Button.Green"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRightSecond"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeftSecond"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKeyPasswordSecond" />

                <Button
                    android:id="@+id/buttonUseAnotherPassPhrase"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/margin_between_buttons"
                    android:text="@string/use_another_pass_phrase"
                    android:theme="@style/AppWidget.Button.SilverWithWhiteText"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRightSecond"
...
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRightSuccess"
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeftSuccess"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSuccessTitle"
                    tools:text="@string/you_can_send_and_receive_encrypted_emails" />

                <Button
                    android:id="@+id/buttonSuccess"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/margin_top_button_continue"
                    android:theme="@style/AppWidget.Button.Green"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRightSuccess"
                    app:layout_constraintHorizontal_bias="0.0"
...
