...
    <string name="repeat_pass_phrase">Repeat pass phrase</string>
    <string name="loss_of_this_pass_phrase_cannot_be_recovered">Lost pass phrase cannot be recovered.</string>
    <string name="see_choosing_secure_pass_phrases">See choosing secure pass phrases</string>
    <string name="select_stronger_pass_phrase">Please select a stronger pass phrase. Combinations of 4 to 5 uncommon
        words are the best.</string>
    <string name="password_quality_subtext">(time to crack:</string>
    <string name="password_quality_perfect">perfect</string>
    <string name="password_quality_great">great</string>
    <string name="password_quality_good">good</string>
    <string name="password_quality_reasonable">reasonable</string>
    <string name="password_quality_poor">poor</string>
    <string name="password_quality_weak">weak</string>
    <string name="repeat_passphrase_hint">Please repeat it one more time. Make sure to note the pass phrase down.</string>
    <string name="pass_phrases_do_not_match">The two pass phrases do not match, please try again.</string>
    <string name="you_are_all_set">You\'re all set!</string>
    <string name="you_can_send_and_receive_encrypted_emails">From now on, you can send and receive encrypted emails on
        this email account.</string>
    <string name="please_wait_while_key_will_be_created">Creating a key, please wait</string>
    <string name="not_private_key">This is not a private key</string>
    <string name="setup_app">Please set up the app before use this option</string>
...
